// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render polygon renders filter by polygon in middle of drawing 1`] = `
<EuiPopover
  anchorPosition="leftUp"
  button={
    <EuiPanel
      className="spatialFilterToolbar__shape"
      paddingSize="none"
    >
      <EuiButtonIcon
        aria-label="draw_filter_shape"
        aria-pressed={true}
        color="primary"
        display="fill"
        iconType={Object {}}
        isSelected={true}
        onClick={[Function]}
        size="s"
        title="Cancel"
      />
    </EuiPanel>
  }
  closePopover={[Function]}
  data-test-subj="drawShapePopOver"
  display="inlineBlock"
  hasArrow={true}
  id="drawShapeId"
  isOpen={false}
  ownFocus={true}
  panelPaddingSize="none"
>
  <EuiContextMenu
    initialPanelId={0}
    panels={
      Array [
        Object {
          "content": <FilterInputPanel
            defaultFilterLabel="polygon"
            drawLabel="Draw Polygon"
            mode="polygon"
            onSubmit={[Function]}
            relations={
              Array [
                "intersects",
                "disjoint",
                "within",
              ]
            }
          />,
          "id": 0,
          "title": "DRAW SHAPE",
        },
      ]
    }
    size="m"
  />
</EuiPopover>
`;

exports[`render polygon renders filter by polygon option 1`] = `
<EuiPopover
  anchorPosition="leftUp"
  button={
    <EuiPanel
      className="spatialFilterToolbar__shape"
      paddingSize="none"
    >
      <EuiButtonIcon
        aria-label="draw_filter_shape"
        aria-pressed={false}
        color="primary"
        display="empty"
        iconType={Object {}}
        isSelected={false}
        onClick={[Function]}
        size="s"
        title="Draw Polygon"
      />
    </EuiPanel>
  }
  closePopover={[Function]}
  data-test-subj="drawShapePopOver"
  display="inlineBlock"
  hasArrow={true}
  id="drawShapeId"
  isOpen={false}
  ownFocus={true}
  panelPaddingSize="none"
>
  <EuiContextMenu
    initialPanelId={0}
    panels={
      Array [
        Object {
          "content": <FilterInputPanel
            defaultFilterLabel="polygon"
            drawLabel="Draw Polygon"
            mode="polygon"
            onSubmit={[Function]}
            relations={
              Array [
                "intersects",
                "disjoint",
                "within",
              ]
            }
          />,
          "id": 0,
          "title": "DRAW SHAPE",
        },
      ]
    }
    size="m"
  />
</EuiPopover>
`;

exports[`render rectangle renders filter by rectangle in middle of drawing 1`] = `
<EuiPopover
  anchorPosition="leftUp"
  button={
    <EuiPanel
      className="spatialFilterToolbar__shape"
      paddingSize="none"
    >
      <EuiButtonIcon
        aria-label="draw_filter_shape"
        aria-pressed={true}
        color="primary"
        display="fill"
        iconType="vector"
        isSelected={true}
        onClick={[Function]}
        size="s"
        title="Cancel"
      />
    </EuiPanel>
  }
  closePopover={[Function]}
  data-test-subj="drawShapePopOver"
  display="inlineBlock"
  hasArrow={true}
  id="drawShapeId"
  isOpen={false}
  ownFocus={true}
  panelPaddingSize="none"
>
  <EuiContextMenu
    initialPanelId={0}
    panels={
      Array [
        Object {
          "content": <FilterInputPanel
            defaultFilterLabel="rectangle"
            drawLabel="Draw Rectangle"
            mode="rectangle"
            onSubmit={[Function]}
            relations={
              Array [
                "intersects",
                "disjoint",
                "within",
              ]
            }
          />,
          "id": 0,
          "title": "DRAW SHAPE",
        },
      ]
    }
    size="m"
  />
</EuiPopover>
`;

exports[`render rectangle renders filter by rectangle option 1`] = `
<EuiPopover
  anchorPosition="leftUp"
  button={
    <EuiPanel
      className="spatialFilterToolbar__shape"
      paddingSize="none"
    >
      <EuiButtonIcon
        aria-label="draw_filter_shape"
        aria-pressed={false}
        color="primary"
        display="empty"
        iconType="vector"
        isSelected={false}
        onClick={[Function]}
        size="s"
        title="Draw Rectangle"
      />
    </EuiPanel>
  }
  closePopover={[Function]}
  data-test-subj="drawShapePopOver"
  display="inlineBlock"
  hasArrow={true}
  id="drawShapeId"
  isOpen={false}
  ownFocus={true}
  panelPaddingSize="none"
>
  <EuiContextMenu
    initialPanelId={0}
    panels={
      Array [
        Object {
          "content": <FilterInputPanel
            defaultFilterLabel="rectangle"
            drawLabel="Draw Rectangle"
            mode="rectangle"
            onSubmit={[Function]}
            relations={
              Array [
                "intersects",
                "disjoint",
                "within",
              ]
            }
          />,
          "id": 0,
          "title": "DRAW SHAPE",
        },
      ]
    }
    size="m"
  />
</EuiPopover>
`;
